--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "swiper": "^8.4.5",
     "vant": "^4.0.3",
@@ -26,6 +27,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "mockjs": "^1.1.0",
     "postcss-pxtorem": "^3.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
